--- a/skin/board/default/style.css
+++ b/skin/board/default/style.css
@@ -4,6 +4,8 @@
 
 .sch_word {color: #ff3061}
 .gp_skin_list, #bo_v, #bo_w{font-size:13px;font-family:dotum;width:100%;padding:0;margin:0}
+#bo_w input[type="text"], #bo_w textarea, #bo_vc_w input[type="text"], #bo_vc_w textarea{font-size:13px !important;}
+#bo_w textarea, #bo_vc_w textarea {line-height: 1.5;}
 
 /* 리스트 테이블 및 기본 테이블 */
 .tbl_wrap table {width:100%;border-collapse:collapse;border-spacing:0;font-size:1em}
@@ -22,7 +24,7 @@
 
 .tbl_head01 .wr_number{width:60px}
 .tbl_head01 .wr_checkbox{width:30px}
-.tbl_head01 .wr_subject{width:auto}
+.tbl_head01 .wr_subject{width:auto;text-align:left !important;}
 .tbl_head01 .wr_writer{width:100px}
 .tbl_head01 .wr_datetime{width:70px}
 .tbl_head01 .wr_hit{width:60px}
@@ -45,13 +47,14 @@
 /* 캡챠 자동등록(입력)방지 기본 */
 #captcha {display:inline-block;position:relative}
 #captcha legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
+#captcha legend label{font-size:0 !important;}
 #captcha #captcha_img {border:1px solid #e9e9e9;width:100px;height:41px;vertical-align:top}
 
 #captcha #captcha_mp3 {position:absolute;top:0;left:101px;;margin:0;padding:0;width:23px;height:22px;border:0;background:transparent;vertical-align:middle;overflow:hidden;cursor:pointer}
 #captcha #captcha_mp3 span {position:absolute;top:0;left:0;width:23px;height:22px;background:url('./img/sound.gif')}
 #captcha #captcha_reload {position:absolute;top:21px;left:101px;margin:0;padding:0;width:23px;height:22px;border:0;background:transparent;vertical-align:middle;overflow:hidden;cursor:pointer}
 #captcha #captcha_reload span {position:absolute;top:0;left:0;width:23px;height:22px;background:url('./img/reload.gif')}
-#captcha #captcha_key {margin:0 0 0 25px;padding:0 5px;width:70px;height:41px;border:1px solid #b8c9c2;background:#f7f7f7;font-size:1.333em;font-weight:bold;text-align:center;line-height:2.8em;vertical-align:middle}
+#captcha #captcha_key {display:inline;margin:0 0 0 25px;padding:0 5px !important;width:70px;height:41px;border:1px solid #b8c9c2;background:#f7f7f7;font-size:1.333em;font-weight:bold;text-align:center;line-height:2.8em;vertical-align:middle}
 #captcha #captcha_info {display:block;margin:5px 0 0;font-size:0.95em;letter-spacing:-0.1em}
 
 /* 버튼 */
@@ -108,11 +111,11 @@ a.pg_page {border:0}
 .tbl_frm01 table {width:100%;border-collapse:collapse;border-spacing:0;font-size:1em}
 .tbl_frm01 th, .tbl_frm01 td{vertical-align:middle}
 .tbl_frm01 th {vertical-align:middle;letter-spacing:-2px;width:80px;padding:7px 13px;border:1px solid #e9e9e9;border-left:0;background:#f5f8f9;text-align:left}
-.tbl_frm01 td {width:auto;padding:7px 10px;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;background:transparent}
+.tbl_frm01 td {width:auto;padding:7px 10px;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;background:transparent;text-align:left !important;}
 .tbl_frm01 textarea, .frm_input {border:1px solid #e4eaec;background:#f7f7f7;color:#000;vertical-align:middle;line-height:2em}
 .tbl_frm01 textarea {margin:0;padding:2px 2px 3px}
 .tbl_frm01 .frm_input {margin:0;padding:0;font-size:1em}
-.tbl_frm01 input[type="password"].frm_input, .tbl_frm01 input[type="text"].frm_input{width:auto;padding: 6px 12px;height:34px;*height:auto;border-radius: 4px;color: #555;vertical-align:middle}
+.tbl_frm01 input[type="password"].frm_input, .tbl_frm01 input[type="text"].frm_input{width:auto;padding: 6px 12px !important;height:34px;*height:auto;border-radius: 4px;color: #555;vertical-align:middle;line-height:1.5}
 .tbl_frm01 textarea {width:98%;height:120px;font-size:1em}
 .tbl_frm01 a {text-decoration:none}
 .tbl_frm01 .frm_file {display:block;margin-bottom:5px}
@@ -121,10 +124,11 @@ a.pg_page {border:0}
 /* list-head 태그 리스트 */
 #bo_list .list_head_tags {margin: 0 0 10px;padding: 0;list-style: none;zoom: 1}
 #bo_list .list_head_tags:after{display: block;visibility: hidden;content: "";clear: both;width: 100%;height: 0;overflow: hidden}
-#bo_list .list_head_tags li {float: left;margin: 0 5px 5px 0}
+#bo_list .list_head_tags li {float: left;margin: 0 5px 5px 0;list-style:none}
 #bo_list .list_head_tags li a{border:0;display: inline-block;}
 #bo_list .list_head_tags li .tags-txt {display: inline-block;padding: 4px 10px;border: 1px solid #e5e9ee;border-right: 0;color: #666}
 #bo_list .list_head_tags li .tags-cnt {display: inline-block;padding: 4px 7px;border: 1px solid #e5e9ee;background: #f2f2f2;color: #666}
+#bo_list .list_head_tags li span{display: inline-block;height:32px;vertical-align:middle}
 
 #bo_list span.bo-tags {display: inline-block;}
 #bo_list .bo-tags a {display: inline-block;color: #999;}
@@ -279,20 +283,22 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 .btn_bo_user li {float:left;margin-left:5px}
 .btn_bo_adm {float:left}
 .btn_bo_adm li {float:left;margin-right:5px}
-.btn_bo_adm input, .btn_bo_adm button{font-size:1em;padding:8px;border:0;background:#e8180c;color:#fff;text-decoration:none;vertical-align:middle}
+.btn_bo_adm input, .btn_bo_adm button{font-size:1em;padding:8px !important;border:0;background:#e8180c;color:#fff;text-decoration:none;vertical-align:middle}
 .bo_notice td {background:#f5f6fa}
 .bo_notice td a {font-weight:bold}
 .td_num strong {color:#000}
 .bo_cate_link {display:inline-block;margin:0 3px 0 0;padding:0 6px 0 0;border-right:1px solid #e7f1ed;color:#999 !important;font-weight:bold;text-decoration:none} /* 글제목줄 분류스타일 */
 .bo_current {color:#e8180c}
 #bo_list .cnt_cmt {display:inline-block;margin:0 0 0 3px;font-weight:bold}
+.bo_fx ul li{list-style:none}
+
 
 #bo_sch {margin-bottom:10px;padding-top:5px;text-align:center}
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden;border:0;}
 /* 리스트 검색 폼 */
-#bo_sch select{margin:0;height:auto;vertical-align:middle;font-size:1em}
-#bo_sch input[type="text"].frm_input{margin:0;padding:2px;width:98px;height:auto;vertical-align:middle;font-size:1em}
-#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;padding:.4em .8em;font-size:1em}
+#bo_sch select{margin:0;height:auto !important;vertical-align:middle;font-size:1em;width:auto;}
+#bo_sch input[type="text"].frm_input{margin:0;padding:2px !important;width:98px;height:auto;vertical-align:middle;font-size:1em}
+#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;padding:.5em .8em !important;font-size:1em;height:auto;line-height:1em}
 
 /* 게시판 쓰기 */
 #char_count_desc {display:block;margin:0 0 5px;padding:0}
@@ -322,7 +328,7 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_v_file {}
 #bo_v_file h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_v_file ul {margin:0;padding:0;list-style:none}
-#bo_v_file li {padding:0 10px;border-bottom:1px solid #eee;background:#f5f6fa}
+#bo_v_file li {padding:0 10px;border-bottom:1px solid #eee;background:#f5f6fa;list-style:none}
 #bo_v_file a {display:inline-block;padding:8px 0 7px;width:100%;color:#000;word-wrap:break-word;border:0;}
 #bo_v_file a:focus, #bo_v_file a:hover, #bo_v_file a:active {text-decoration:none}
 #bo_v_file img {float:left;margin:0 10px 0 0;vertical-align:middle}
@@ -331,7 +337,7 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_v_link {}
 #bo_v_link h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_v_link ul {margin:0;padding:0;list-style:none}
-#bo_v_link li {padding:0 10px;border-bottom:1px solid #eee;background:#f5f6fa}
+#bo_v_link li {padding:0 10px;border-bottom:1px solid #eee;background:#f5f6fa;list-style:none}
 #bo_v_link a {border:0;display:inline-block;padding:8px 0 7px;width:100%;color:#000;word-wrap:break-word}
 #bo_v_link a:focus, #bo_v_link a:hover, #bo_v_link a:active {text-decoration:none}
 .bo_v_link_cnt {display:inline-block;margin:0 0 3px 16px}
@@ -348,9 +354,9 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_v_bot ul {margin:0;padding:0;list-style:none}
 
 .bo_v_nb {float:left}
-.bo_v_nb li {float:left;margin-right:5px}
+.bo_v_nb li {float:left;margin-right:5px;list-style:none !important}
 .bo_v_com {float:right}
-.bo_v_com li {float:left;margin-left:5px}
+.bo_v_com li {float:left;margin-left:5px;list-style:none !important}
 
 #bo_v_atc {min-height:200px;height:auto !important;height:200px}
 #bo_v_atc_title {position:absolute;font-size:0;line-height:0;overflow:hidden}
@@ -393,11 +399,31 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 
 .bo_vc_act {float:right;margin:0;list-style:none;zoom:1}
 .bo_vc_act:after {display:block;visibility:hidden;clear:both;content:""}
-.bo_vc_act li {list-style:none;float:left;margin-left:5px}
+.bo_vc_act li {list-style:none !important;float:left;margin-left:5px}
 
 #bo_vc_w {position:relative;margin:0 0 10px;padding:0 0 20px;border-bottom:1px solid #cfded8}
 #bo_vc_w h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_vc_w #char_cnt {display:block;margin:0 0 5px}
+
+/* 쓰기페이지 태그 */
+.screen-reader-text{display:inline-block !important;position:absolute;top:0;left:0;margin:0 !important;padding:0 !important;font-size:0;line-height:0;border:0 !important;overflow:hidden !important}
+#post_tag ul.tagit li.tagit-new {padding: .25em 4px .25em 0}
+#bo_w #post_tag ul.tagit input[type="text"].ui-autocomplete-input {
+-moz-box-sizing:    border-box !important;
+-webkit-box-sizing: border-box !important;
+box-sizing:         border-box !important;
+-moz-box-shadow: none !important;
+-webkit-box-shadow: none !important;
+box-shadow: none !important;
+border: 0 !important;
+margin: 0 !important;
+padding: 0 !important;
+width: inherit !important;
+background-color: inherit !important;
+outline: none !important;
+}
+#post_tag ul.tagit{margin-top:0;margin-bottom:20px}
+#post_tag ul.tagit li{list-style:none}
 
 @media screen and (max-width: 767px) {
     .tbl_wrap .wr_good, .tbl_wrap .wr_nogood {display:none}
