--- a/view/css/g5_new.css
+++ b/view/css/g5_new.css
@@ -37,7 +37,7 @@ body{padding:0}
 .new_win tr.odd .column1{background:#f4f9fe}
 .column1{background:#f9fcfe}
 .new_win td{color:#678197;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .1em;text-align:center}
-.new_win td.subject{text-align:left}
+.new_win td.td_subject{text-align:left}
 .new_win th{font-weight:400;color:#678197;text-align:left;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .1em}
 .new_win thead th{background:#f4f9fe;text-align:center;color:#66a3d3}
 .new_win tfoot th{text-align:center;background:#f4f9fe}
