--- a/view/css/g5_new.css
+++ b/view/css/g5_new.css
@@ -6,8 +6,8 @@ body{padding:0}
 .msg_sound_only, .sound_only {display:inline-block !important;position:absolute;top:0;left:0;margin:0 !important;padding:0 !important;font-size:0;line-height:0;border:0 !important;overflow:hidden !important}
 
 .new_win {}
-.new_win .tbl_wrap {margin:0 20px}
-.new_win #win_title {margin:0 0 20px;padding:20px;border-top:3px solid #333;border-bottom:1px solid #dde4e9;background:#fff;font-size:1.2em}
+.new_win .tbl_wrap {padding:1em;background-color:#fff}
+.new_win #win_title {margin:0 0 5px;padding:20px;border-top:3px solid #333;border-bottom:1px solid #dde4e9;background:#fff;font-size:1.2em}
 .new_win #win_title .sv {font-size:0.75em;line-height:1.2em}
 .new_win .win_ul {margin:-20px 0 20px 0;padding:0 20px;border-bottom:1px solid #455255;background:#484848;list-style:none;zoom:1}
 .new_win .win_ul:after {display:block;visibility:hidden;clear:both;content:""}
@@ -36,9 +36,9 @@ body{padding:0}
 .new_win tr.odd td{background:#f7fbff}
 .new_win tr.odd .column1{background:#f4f9fe}
 .column1{background:#f9fcfe}
-.new_win td{color:#678197;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .1em;text-align:center}
+.new_win td{color:#678197;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .2em;text-align:center}
 .new_win td.td_subject{text-align:left}
-.new_win th{font-weight:400;color:#678197;text-align:left;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .1em}
+.new_win th{font-weight:400;color:#678197;text-align:left;border-bottom:1px solid #e5eff8;border-left:1px solid #e5eff8;padding:.3em .2em}
 .new_win thead th{background:#f4f9fe;text-align:center;color:#66a3d3}
 .new_win tfoot th{text-align:center;background:#f4f9fe}
 .new_win tfoot th strong{margin:.5em .5em .5em 0;color:#66a3d3}
