--- a/skin/board/default/style.css
+++ b/skin/board/default/style.css
@@ -50,7 +50,7 @@
 #captcha {display:inline-block;position:relative}
 #captcha legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden;border:0}
 #captcha legend label{font-size:0 !important;}
-#captcha #captcha_img {border:1px solid #e9e9e9;width:100px;height:41px;vertical-align:top}
+#captcha #captcha_img {display:inline;border:1px solid #e9e9e9;width:100px;height:41px;vertical-align:top}
 
 #captcha #captcha_mp3 {position:absolute;top:0;left:101px;;margin:0;padding:0;width:23px;height:22px;border:0;background:transparent;vertical-align:middle;overflow:hidden;cursor:pointer}
 #captcha #captcha_mp3 span {position:absolute;top:0;left:0;width:23px;height:22px;background:url('./img/sound.gif')}
