--- a/skin/board/default/style.css
+++ b/skin/board/default/style.css
@@ -114,6 +114,7 @@ a.pg_page {border:0}
 .tbl_frm01 th, .tbl_frm01 td{vertical-align:middle}
 .tbl_frm01 th {vertical-align:middle;letter-spacing:-2px;width:80px;padding:7px 13px;border:1px solid #e9e9e9;border-left:0;background:#f5f8f9;text-align:left}
 .tbl_frm01 td {width:auto;padding:7px 10px;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;background:transparent;text-align:left !important;}
+.tbl_frm01 td label{display:inline}
 .tbl_frm01 textarea, .frm_input {border:1px solid #e4eaec;background:#f7f7f7;color:#000;vertical-align:middle;line-height:2em}
 .tbl_frm01 textarea {margin:0;padding:2px 2px 3px}
 .tbl_frm01 .frm_input {margin:0;padding:0;font-size:1em}
@@ -166,10 +167,10 @@ a.pg_page {border:0}
 
 /* 쓰기 버튼 */
 #bo_w .btn_confirm {} /* 서식단계 진행 */
-#bo_w .btn_submit, #bo_w button.btn_submit { padding:8px;border:0;background:#ff3061;color:#fff;letter-spacing:-0.1em;cursor:pointer;font-size:1em;vertical-align:middle;margin-bottom:0 }
+#bo_w .btn_submit, #bo_w button.btn_submit { padding:8px;border:0;background:#ff3061;color:#fff;height:36px;cursor:pointer;font-size:1em;vertical-align:middle;margin-bottom:0 }
 #bo_w button.btn_submit {}
 #bo_w fieldset .btn_submit {}
-#bo_w .btn_cancel {}
+#bo_w .btn_cancel {height:36px}
 #bo_w button.btn_cancel {}
 #bo_w .btn_cancel:focus, #bo_w .btn_cancel:hover {}
 #bo_w a.btn_frmline, #bo_w button.btn_frmline {} /* 우편번호검색버튼 등 */
@@ -186,7 +187,7 @@ a.pg_page {border:0}
 #bo_list .tbl_head01 tfoot th {}
 #bo_list .tbl_head01 tfoot td {}
 #bo_list .tbl_head01 tbody th {}
-#bo_list .tbl_head01 td {}
+#bo_list .tbl_head01 td {border-left:0}
 #bo_list .tbl_head01 a {}
 #bo_list td.empty_table {}
 
@@ -269,7 +270,7 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_cate h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #bo_cate ul {margin:0;padding:0;margin-bottom:20px;padding-left:1px;zoom:1}
 #bo_cate ul:after {display:block;visibility:hidden;clear:both;content:""}
-#bo_cate li {float:left;margin-bottom:-1px;list-style:none}
+#bo_cate li {margin:0;padding:0;float:left;margin-bottom:-1px;list-style:none}
 #bo_cate a {display:block;position:relative;margin-left:-1px;padding:6px 0 5px;width:90px;border:1px solid #ddd;background:#f7f7f7;color:#888;text-align:center;letter-spacing:-0.1em;line-height:1.2em;cursor:pointer}
 #bo_cate a:focus, #bo_cate a:hover, #bo_cate a:active {text-decoration:none}
 #bo_cate #bo_cate_on {z-index:2;border:1px solid #565e60;background:#fff;color:#565e60;font-weight:bold}
@@ -299,9 +300,9 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden;border:0;}
 /* 리스트 검색 폼 */
 #bo_sch select{margin:0;height:auto !important;vertical-align:middle;font-size:1em;width:auto;}
-#bo_sch select[name="sfl"]{display:inline-block}
-#bo_sch input[type="text"].frm_input{display:inline-block;margin:0;padding:2px !important;width:98px;height:auto;vertical-align:middle;font-size:1em}
-#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;padding:.5em .8em !important;font-size:1em;height:auto;line-height:1em}
+#bo_sch select[name="sfl"]{display:inline-block;height:30px !important;width:auto;padding-top:2px;padding-bottom:2px}
+#bo_sch input[type="text"].frm_input{display:inline-block;margin:0;padding:2px !important;width:98px;height:30px;vertical-align:middle;font-size:1em;line-height:1em}
+#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;height:30px !important;padding:.5em .8em !important;font-size:1em;height:auto;line-height:1em}
 
 /* 게시판 쓰기 */
 #char_count_desc {display:block;margin:0 0 5px;padding:0}
