--- a/skin/board/gallery/style.css
+++ b/skin/board/gallery/style.css
@@ -115,6 +115,7 @@ a.pg_page {border:0}
 .tbl_frm01 th, .tbl_frm01 td{vertical-align:middle}
 .tbl_frm01 th {vertical-align:middle;letter-spacing:-2px;width:80px;padding:7px 13px;border:1px solid #e9e9e9;border-left:0;background:#f5f8f9;text-align:left}
 .tbl_frm01 td {width:auto;padding:7px 10px;border-top:1px solid #e9e9e9;border-bottom:1px solid #e9e9e9;background:transparent}
+.tbl_frm01 td label{display:inline}
 .tbl_frm01 textarea, .frm_input {border:1px solid #e4eaec;background:#f7f7f7;color:#000;vertical-align:middle;line-height:2em}
 .tbl_frm01 textarea {margin:0;padding:2px 2px 3px}
 .tbl_frm01 .frm_input {margin:0;padding:0;font-size:1em}
@@ -299,10 +300,9 @@ a.btn_admin:focus, a.btn_admin:hover {text-decoration:none;border:1px solid #e81
 #bo_sch legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden;border:0;}
 /* 리스트 검색 폼 */
 #bo_sch select{margin:0;height:auto !important;vertical-align:middle;font-size:1em;width:auto;}
-#bo_sch select[name="sfl"]{display:inline-block}
-#bo_sch input[type="text"].frm_input{display:inline-block;margin:0;padding:2px !important;width:98px;height:auto;vertical-align:middle;font-size:1em}
-#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;padding:.5em .8em !important;font-size:1em;height:auto;line-height:1em}
-
+#bo_sch select[name="sfl"]{display:inline-block;height:30px !important;width:auto;padding-top:2px;padding-bottom:2px}
+#bo_sch input[type="text"].frm_input{display:inline-block;margin:0;padding:2px !important;width:98px;height:30px;vertical-align:middle;font-size:1em;line-height:1em}
+#bo_sch input[type="submit"].btn_submit{margin:0;vertical-align:middle;height:30px !important;padding:.5em .8em !important;font-size:1em;height:auto;line-height:1em}
 /* 게시판 쓰기 */
 #char_count_desc {display:block;margin:0 0 5px;padding:0}
 #char_count_wrap {margin:5px 0 0;text-align:right}
